tried to fix icon alignment

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -115,7 +115,8 @@ figure img {
 /* contact me images*/
 .holla-at-me img {
   display: flexbox;
-  margin: 0 180px;
+  margin-inline: 180px;
+  position: relative;
   width: 100px;
   height: 100px;
   border-radius: 50%;
